# ss_prep_260419

./: .gitignore  README.md
mw_bringup/: CMakeLists.txt  package.xml
mw_bringup/launch/: demo.launch.py  emulator.launch.py  navigate_test.launch.py
mw_bringup/scripts/: self_test.py
mw_hfsm_engine/: package.xml  setup.cfg  setup.py
mw_hfsm_engine/mw_hfsm_engine/: __init__.py  behavior_sm.py  cancel.py  decorators.py  exceptions.py  observer.py  parallel.py  spec_loader.py  state.py  state_machine.py
mw_hfsm_engine/test/: test_cancel.py  test_engine_basic.py  test_observer.py  test_parallel.py  test_retry.py  test_spec_loader.py  test_spec_roundtrip.py
mw_hfsm_examples/: package.xml  setup.cfg  setup.py
mw_hfsm_examples/mw_hfsm_examples/: __init__.py  visit_three_points.py
mw_hfsm_examples/test/: test_visit_three_points.py
mw_hfsm_ros/: package.xml  setup.cfg  setup.py
mw_hfsm_ros/mw_hfsm_ros/: __init__.py  lifecycle_action_state.py
mw_hfsm_ros/test/: test_lifecycle_action_state.py
mw_hsm_engine/: package.xml  setup.cfg  setup.py
mw_hsm_engine/mw_hsm_engine/: __init__.py  behavior_sm.py  exceptions.py  state_machine.py  userdata.py
mw_hsm_engine/test/: test_engine_basic.py
mw_rcs_bridge/: package.xml  setup.cfg  setup.py
mw_rcs_bridge/mw_rcs_bridge/: __init__.py  rcs_bridge_node.py  schema.py
mw_rcs_bridge/test/: test_schema.py
mw_robot_emulator/: package.xml  setup.cfg  setup.py
mw_robot_emulator/mw_robot_emulator/: virtual_robot_node.py
mw_robot_emulator/test/: test_physics.py
mw_skill_library/: CMakeLists.txt  package.xml
mw_skill_library/include/mw_skill_library/: ros2_action_bt_node.hpp
mw_skill_library/include/mw_skill_library/skills/: capture_image_bt_node.hpp  drive_to_pose_bt_node.hpp  move_motor_bt_node.hpp  navigate_to_pose_bt_node.hpp
mw_skill_library/src/: capture_image_server.cpp  drive_to_pose_server.cpp  move_motor_server.cpp
mw_skill_states/: package.xml  setup.cfg  setup.py
mw_skill_states/mw_skill_states/: __init__.py  capture_image.py  drive_to_pose.py  move_motor.py
mw_skill_states/test/: test_capture_image.py  test_drive_to_pose.py  test_move_motor.py
mw_skill_supervisor/: package.xml  setup.cfg  setup.py
mw_skill_supervisor/mw_skill_supervisor/: supervisor_node.py
mw_task_manager/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mw_task_manager/config/: demo_fetch_cup.xml  job_visit_three_points.xml  step_navigate_to_pose.xml
mw_task_manager/include/mw_task_manager/: bt_executor_node.hpp
mw_task_manager/mw_task_manager/: __init__.py  hfsm_executor_node.py
mw_task_manager/src/: bt_executor_node.cpp  main.cpp
mw_task_manager/test/: test_bt_factory.cpp  test_executor_smoke.py
mw_task_msgs/: CMakeLists.txt  package.xml
mw_task_msgs/action/: CaptureImage.action  DriveToPose.action  ExecuteSubJob.action  ExecuteTask.action  MoveMotor.action
mw_task_msgs/msg/: BtExecutionStatus.msg  HfsmExecutionStatus.msg  MotorStatus.msg  MotorStatusArray.msg
mw_task_msgs/srv/: InjectFault.srv  ListTasks.srv  LoadTask.srv  RequestCapture.srv  ResetRobot.srv  SaveTask.srv  SetMotorTarget.srv
mw_task_repository/: package.xml  setup.cfg  setup.py
mw_task_repository/mw_task_repository/: dispatch_cli.py  repo_node.py
mw_task_repository/test/: test_path_for.py
mw_web_gui/: CMakeLists.txt  package.xml
mw_web_gui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mw_web_gui/frontend/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mw_web_gui/frontend/log/: latest_build
mw_web_gui/frontend/src/: App.vue  style.css  types.ts
mw_web_gui/frontend/src/components/: BtStatus.vue  BtTreeView.vue  ConnectionStatus.vue  HfsmStateView.vue  HfsmStatus.vue  RobotState.vue  SpecEditor.vue  TaskList.vue
mw_web_gui/frontend/src/composables/: useRos.ts
mw_web_gui/launch/: navigate_web_gui.launch.py  web_gui.launch.py
mw_web_gui/scripts/: start_web_gui.sh
