<?xml version="1.0"?>
<package format="3">
  <name>mw_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and top-level configs for mw Task Manager</description>
  <maintainer email="jung.ryuwoon@gmail.com">Ryuwoon Jung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>mw_skill_library</exec_depend>
  <exec_depend>mw_task_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
