<?xml version="1.0"?>
<package format="3">
  <name>mw_hfsm_examples</name>
  <version>0.0.1</version>
  <description>Reference SubJob implementations (VisitThreePoints etc.) showing how to wire mw_skill_states + mw_hfsm_engine into complete BehaviorSMs</description>
  <maintainer email="jung.ryuwoon@gmail.com">Ryuwoon Jung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>mw_hfsm_engine</depend>
  <depend>mw_hfsm_ros</depend>
  <depend>mw_skill_states</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
