<?xml version="1.0"?>
<package format="3">
  <name>mw_hfsm_ros</name>
  <version>0.0.1</version>
  <description>ROS 2 integration layer for mw_hfsm_engine — LifecycleAwareActionState wrapper and (later) the executor / status publisher nodes</description>
  <maintainer email="jung.ryuwoon@gmail.com">Ryuwoon Jung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>mw_hfsm_engine</depend>
  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>action_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
