<?xml version="1.0"?>
<package format="3">
  <name>mw_task_manager</name>
  <version>0.0.1</version>
  <description>HFSM executor node for mw Task Manager — runs SubJob specs through mw_hfsm_engine, serves ExecuteSubJob action, publishes HfsmExecutionStatus</description>
  <maintainer email="jung.ryuwoon@gmail.com">Ryuwoon Jung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mw_hfsm_engine</depend>
  <depend>mw_hfsm_ros</depend>
  <depend>mw_task_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
