<?xml version="1.0"?>
<package format="3">
  <name>mw_task_repository</name>
  <version>0.0.1</version>
  <description>Git-backed Task XML storage + ROS 2 service facade + dispatch CLI</description>
  <maintainer email="jung.ryuwoon@gmail.com">Ryuwoon Jung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mw_task_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>mw_bringup</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
